# vmv

./: .audio.c.swp  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  audio.c  audio.h  config.h  config.lua  configure  debug.h  graphics.c  graphics.h  lua_api.c  lua_api.h  lua_config.c  lua_config.h  main.c  ring_buffer.c  ring_buffer.h  run.sh  sound_io.c  sound_io.h  test.lua  timer.c  timer.h  triangle.lua  vis.lua  visualisations.c  visualisations.h  visualiser.c
